# drgmodmanager

./: .gitignore  README.md  main.py  pyproject.toml
drgmodmanager/: __init__.py  config.py  mod.py  profile.py
drgmodmanager/cli/: __init__.py  profile.py  prompt.py
